{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 832,
  "lineage": "94003c69-4b31-09df-e4ae-a8593ebbb024",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:loadbalancer/app/lb-web/07370a26ed62ff17",
            "arn_suffix": "app/lb-web/07370a26ed62ff17",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-web-1765047154.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:loadbalancer/app/lb-web/07370a26ed62ff17",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-web",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-063f1620fc2e4aeb7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-083321f210a47e801"
              },
              {
                "subnet_id": "subnet-0d1714f0c6abd76a4"
              }
            ],
            "subnets": [
              "subnet-083321f210a47e801",
              "subnet-0d1714f0c6abd76a4"
            ],
            "vpc_id": "vpc-0ca014bc9d381f04a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:loadbalancer/app/lb-web/07370a26ed62ff17"
          },
          "dependencies": [
            "module.sg.aws_security_group.sg_map",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:listener/app/lb-web/07370a26ed62ff17/2275a57958943aba",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:511874874257:certificate/c03d5a28-ea72-4f61-a59e-7be92b43701c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/32086ad6f111c909",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:listener/app/lb-web/07370a26ed62ff17/2275a57958943aba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:loadbalancer/app/lb-web/07370a26ed62ff17",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:listener/app/lb-web/07370a26ed62ff17/2275a57958943aba"
          },
          "dependencies": [
            "module.crt.aws_acm_certificate.web",
            "module.lb.aws_lb.web",
            "module.sg.aws_security_group.sg_map",
            "module.tg.aws_lb_target_group.web",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cache",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-09812e37dd3383096",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09812e37dd3383096",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fw-cache",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-cache"
            },
            "tags_all": {
              "Name": "fw-cache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-09812e37dd3383096",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0f40ec1a7a679abfb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f40ec1a7a679abfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fw-db",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-db"
            },
            "tags_all": {
              "Name": "fw-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0f40ec1a7a679abfb",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0a7c9787c633b5ff5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a7c9787c633b5ff5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fw-icmp",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-icmp"
            },
            "tags_all": {
              "Name": "fw-icmp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0a7c9787c633b5ff5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-063f1620fc2e4aeb7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-063f1620fc2e4aeb7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fw-lb",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-lb"
            },
            "tags_all": {
              "Name": "fw-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-063f1620fc2e4aeb7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "out",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0449e0ad1973ec079",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0449e0ad1973ec079",
            "ingress": [],
            "name": "fw-out",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-out"
            },
            "tags_all": {
              "Name": "fw-out"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0449e0ad1973ec079",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "remote",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0e8998b524d618960",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e8998b524d618960",
            "ingress": [
              {
                "cidr_blocks": [
                  "183.98.32.210/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fw-remote",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-remote"
            },
            "tags_all": {
              "Name": "fw-remote"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0e8998b524d618960",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0ac7eeb94f8ad93d6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ac7eeb94f8ad93d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fw-web",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-web"
            },
            "tags_all": {
              "Name": "fw-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0ac7eeb94f8ad93d6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/32086ad6f111c909",
            "arn_suffix": "targetgroup/tg-webserver/32086ad6f111c909",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/32086ad6f111c909",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:loadbalancer/app/lb-web/07370a26ed62ff17"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-webserver",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/32086ad6f111c909"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:internet-gateway/igw-09a36882d03ddad10",
            "id": "igw-09a36882d03ddad10",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-igw-main"
            },
            "tags_all": {
              "Name": "seoul-igw-main"
            },
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "igw-09a36882d03ddad10",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-02bbbd4b1b8ffdb50",
            "id": "rtb-02bbbd4b1b8ffdb50",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a36882d03ddad10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-route-public"
            },
            "tags_all": {
              "Name": "seoul-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-02bbbd4b1b8ffdb50",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "without_nat_privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-037704a5caba513df",
            "id": "rtb-037704a5caba513df",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-1"
            },
            "tags_all": {
              "Name": "seoul-route-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-037704a5caba513df",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-09360e777e370d3cd",
            "id": "rtb-09360e777e370d3cd",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-2"
            },
            "tags_all": {
              "Name": "seoul-route-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-09360e777e370d3cd",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b386fc7d690a443b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-037704a5caba513df",
            "subnet_id": "subnet-099b764bcd8354202"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0b386fc7d690a443b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ips",
            "module.vpc.aws_nat_gateway.private_nat_gws",
            "module.vpc.aws_route_table.with_nat_privates",
            "module.vpc.aws_route_table.without_nat_privates",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaf818dcb6c7b721",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-09360e777e370d3cd",
            "subnet_id": "subnet-04448e3ca7c46b36e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0aaf818dcb6c7b721",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ips",
            "module.vpc.aws_nat_gateway.private_nat_gws",
            "module.vpc.aws_route_table.with_nat_privates",
            "module.vpc.aws_route_table.without_nat_privates",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050d1821eed6a86ef",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02bbbd4b1b8ffdb50",
            "subnet_id": "subnet-0d1714f0c6abd76a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-050d1821eed6a86ef",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f382e6414e84c99",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-02bbbd4b1b8ffdb50",
            "subnet_id": "subnet-083321f210a47e801"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-02f382e6414e84c99",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-099b764bcd8354202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b764bcd8354202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-1"
            },
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-099b764bcd8354202",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-04448e3ca7c46b36e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04448e3ca7c46b36e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-2"
            },
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-04448e3ca7c46b36e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0d1714f0c6abd76a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1714f0c6abd76a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-1"
            },
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0d1714f0c6abd76a4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-083321f210a47e801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083321f210a47e801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-2"
            },
            "vpc_id": "vpc-0ca014bc9d381f04a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-083321f210a47e801",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:vpc/vpc-0ca014bc9d381f04a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0a9f8c2850978a503",
            "default_route_table_id": "rtb-03f0075ab9275d721",
            "default_security_group_id": "sg-02b4037316de8da13",
            "dhcp_options_id": "dopt-08f1e1c8c978b36fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca014bc9d381f04a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f0075ab9275d721",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-vpc-main"
            },
            "tags_all": {
              "Name": "seoul-vpc-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "vpc-0ca014bc9d381f04a",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}